[tool.poetry]
name = "orders-attendance-api"
version = "0.0.1"
description = "API to attendance any orders from any ecommerces"
authors = ["Gustavo Alex Torres <gustavoalextorres@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
